; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/crypto/extr_ap_card.c_request_count_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/crypto/extr_ap_card.c_request_count_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.ap_card = type { i32 }

@ap_list_lock = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @request_count_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @request_count_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ap_card*, align 8
  %8 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.ap_card* @to_ap_card(%struct.device* %9)
  store %struct.ap_card* %10, %struct.ap_card** %7, align 8
  store i32 0, i32* %8, align 4
  %11 = call i32 @spin_lock_bh(i32* @ap_list_lock)
  %12 = load %struct.ap_card*, %struct.ap_card** %7, align 8
  %13 = getelementptr inbounds %struct.ap_card, %struct.ap_card* %12, i32 0, i32 0
  %14 = call i32 @atomic_read(i32* %13)
  store i32 %14, i32* %8, align 4
  %15 = call i32 @spin_unlock_bh(i32* @ap_list_lock)
  %16 = load i8*, i8** %6, align 8
  %17 = load i32, i32* @PAGE_SIZE, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @snprintf(i8* %16, i32 %17, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %18)
  ret i32 %19
}

declare dso_local %struct.ap_card* @to_ap_card(%struct.device*) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
